--- a/lessons/lesson1/hello.html
+++ b/lessons/lesson1/hello.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>test</h1>
+    <h1>test!!!</h1>
+    <p>
+        hello
+    </p>
+    <ul>
+        <li>
+            <a href="">hello</a>
+        </li>
+    </ul>
 </body>
 </html>
